force-app/main/default/objects/OpportunityLineItem/fields/isCustomChange__c.field-meta.xml
<CustomField>
    <fullName>isCustomChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomChange</label>
    <type>Checkbox</type>
</CustomField>