force-app/main/default/objects/OpportunityLineItem/fields/ParentOppId__c.field-meta.xml
<CustomField>
    <fullName>ParentOppId__c</fullName>
    <label>ParentOppId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>