force-app/main/default/objects/OpportunityLineItem/fields/Product_Description_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_1__c</fullName>
    <formula>PricebookEntry.Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description 1</label>
    <type>Text</type>
</CustomField>