force-app/main/default/objects/OpportunityLineItem/fields/Product_Description_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_2__c</fullName>
    <formula>PricebookEntry.Product2.Product_Description_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description 2</label>
    <type>Text</type>
</CustomField>