force-app/main/default/objects/OpportunityLineItem/fields/Register_Job__c.field-meta.xml
<CustomField>
    <fullName>Register_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register Job</label>
    <type>Checkbox</type>
</CustomField>